--- a/index.html
+++ b/index.html
@@ -69,25 +69,31 @@ Classifications
 <em class="zf-important">*</em>
 </label>
 <div class="zf-tempContDiv">
-<select class="zf-form-sBox" name="Dropdown1" checktype="c1">
+<select class="zf-form-sBox" name="Dropdown" checktype="c1">
 <option selected="true" value="-Select-">-Select-</option>
-<option value="Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Customer&#x20;Issue&#x29;">Incorrect &#x2f; Incomplete &#x2f; Intercept Shipping Address &#x28;Customer Issue&#x29;</option>
-<option value="Incorrect&#x20;Item&#x28;s&#x29;&#x20;Ordered">Incorrect Item&#x28;s&#x29; Ordered</option>
-<option value="Cancel&#x20;&#x2f;&#x20;Modify&#x20;Order">Cancel &#x2f; Modify Order</option>
-<option value="US&#x20;Return&#x20;&#x2f;&#x20;Exchange">US Return &#x2f; Exchange</option>
-<option value="International&#x20;Return&#x20;&#x2f;&#x20;Exchange">International Return &#x2f; Exchange</option>
-<option value="Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Company&#x20;Issue&#x29;">Incorrect &#x2f; Incomplete &#x2f; Intercept Shipping Address &#x28;Company Issue&#x29;</option>
-<option value="Missing&#x20;&#x2f;&#x20;Incorrect&#x20;Item&#x28;s&#x29;&#x20;Shipped">Missing &#x2f; Incorrect Item&#x28;s&#x29; Shipped</option>
-<option value="Defective&#x20;Merchandise">Defective Merchandise</option>
+<optgroup label="Order Management">
+<option value="Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Customer&#x20;Issue&#x29;">Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Customer&#x20;Issue&#x29;</option>
+<option value="Incorrect&#x20;Item&#x28;s&#x29;&#x20;Ordered">Incorrect&#x20;Item&#x28;s&#x29;&#x20;Ordered</option>
+<option value="Cancel&#x20;&#x2f;&#x20;Modify&#x20;Order">Cancel&#x20;&#x2f;&#x20;Modify&#x20;Order</option>
+<option value="US&#x20;Return&#x20;&#x2f;&#x20;Exchange">US&#x20;Return&#x20;&#x2f;&#x20;Exchange</option>
+<option value="International&#x20;Return&#x20;&#x2f;&#x20;Exchange">International&#x20;Return&#x20;&#x2f;&#x20;Exchange</option>
+<option value="Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Company&#x20;Issue&#x29;">Incorrect&#x20;&#x2f;&#x20;Incomplete&#x20;&#x2f;&#x20;Intercept&#x20;Shipping&#x20;Address&#x20;&#x28;Company&#x20;Issue&#x29;</option>
+<option value="Missing&#x20;&#x2f;&#x20;Incorrect&#x20;Item&#x28;s&#x29;&#x20;Shipped">Missing&#x20;&#x2f;&#x20;Incorrect&#x20;Item&#x28;s&#x29;&#x20;Shipped</option>
+<option value="Defective&#x20;Merchandise">Defective&#x20;Merchandise</option>
+</optgroup>
+<optgroup label="Shipping and Delivery">
 <option value="UPS">UPS</option>
 <option value="USPS">USPS</option>
-<option value="APC&#x20;Postal&#x20;Logistics">APC Postal Logistics</option>
-<option value="Local&#x20;Courier&#x20;Delivery">Local Courier Delivery</option>
-<option value="Will&#x20;Call&#x20;Pickup">Will Call Pickup</option>
-<option value="Freight&#x20;LTL">Freight LTL</option>
-<option value="Full&#x20;Truckload">Full Truckload</option>
-<option value="Account&#x20;Modifications&#x20;Request">Account Modifications Request</option>
-</select><p id="Dropdown1_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
+<option value="APC&#x20;Postal&#x20;Logistics">APC&#x20;Postal&#x20;Logistics</option>
+<option value="Local&#x20;Courier&#x20;Delivery">Local&#x20;Courier&#x20;Delivery</option>
+<option value="Will&#x20;Call&#x20;Pickup">Will&#x20;Call&#x20;Pickup</option>
+<option value="Freight&#x20;LTL">Freight&#x20;LTL</option>
+<option value="Full&#x20;Truckload">Full&#x20;Truckload</option>
+</optgroup>
+<optgroup label="Account Services">
+<option value="Account&#x20;Modifications&#x20;Request">Account&#x20;Modifications&#x20;Request</option>
+</optgroup>
+</select><p id="Dropdown_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
 </div><div class="zf-clearBoth"></div></li><!---------Dropdown Ends Here---------->
 <!---------Single Line Starts Here---------->
 <li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName"> 
@@ -107,7 +113,7 @@ Description
 </ul></div><!---------template Container Starts Here---------->
 <ul><li class="zf-fmFooter"><button class="zf-submitColor" >Submit</button></li></ul></div><!-- 'zf-templateWrapper' ends --></form></div><!-- 'zf-templateWidth' ends -->
 <script type="text/javascript">var zf_DateRegex = new RegExp("^(([0][1-9])|([1-2][0-9])|([3][0-1]))[-](Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec|JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)[-](?:(?:19|20)[0-9]{2})$");
-var zf_MandArray = [ "Name_First", "Name_Last", "Email", "Dropdown1", "SingleLine2"]; 
-var zf_FieldArray = [ "Name_First", "Name_Last", "SingleLine", "Email", "PhoneNumber_countrycode", "SingleLine1", "Dropdown1", "SingleLine2", "MultiLine"]; 
+var zf_MandArray = [ "Name_First", "Name_Last", "Email", "Dropdown", "SingleLine2"]; 
+var zf_FieldArray = [ "Name_First", "Name_Last", "SingleLine", "Email", "PhoneNumber_countrycode", "SingleLine1", "Dropdown", "SingleLine2", "MultiLine"]; 
 var isSalesIQIntegrationEnabled = false;
 var salesIQFieldsArray = [];</script></body></html>
