--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                                 <div class="zf-tempContDiv">
                                     <span> <input fieldType=9 type="text" maxlength="255" name="Email" checktype="c5"
                                             value="" placeholder="" id="Email" /></span>
-                                    <p id="Email_error" class="zf-errorMessage" style="display:none;">Please complete this required field.</p>
+                                    <p id="Email_error" class="zf-errorMessage" style="display:none;">Please complete
+                                        this required field.</p>
                                 </div>
                                 <div class="zf-clearBoth"></div>
                             </li>
@@ -141,13 +142,14 @@
                                         <option value="Other">Other</option>
                                     </optgroup>
                                     <optgroup label="Order Issue">
-                                    <option value="Defective&#x20;Item">Defective&#x20;Item</option>
-                                    <option value="Missing&#x20;Item">Missing&#x20;Item</option>
-                                    <option value="Wrong&#x20;Item">Wrong&#x20;Item</option>
-                                    <option value="Wrong&#x20;Item">Wrong&#x20;Item</option>
-                                    <option value="Payment&#x20;Issue">Payment&#x20;Issue</option>
-                                    <option value="Product&#x20;Assembly">Product&#x20;Assembly</option>
-                                    <option value="Other">Other</option>
+                                        <option value="Defective&#x20;Item">Defective&#x20;Item</option>
+                                        <option value="Missing&#x20;Item">Missing&#x20;Item</option>
+                                        <option value="Wrong&#x20;Item">Wrong&#x20;Item</option>
+                                        <option value="Payment&#x20;Issue">Payment&#x20;Issue</option>
+                                        <option value="Product&#x20;Assembly">Product&#x20;Assembly</option>
+                                        <option value="Damaged&#x20;Item">Damaged&#x20;Item</option>
+                                        <option value="Lost&#x20;Package">Lost&#x20;Package</option>
+                                        <option value="Other">Other</option>
                                     </optgroup>
                                     <optgroup label="Order Status">
                                         <option value="Order&#x20;Status&#x20;Inquiry">Order&#x20;Status&#x20;Inquiry
@@ -161,11 +163,11 @@
                                             International&#x20;Return&#x20;Request</option>
                                     </optgroup>
                                     <optgroup label="Technical Support">
-                                    <option value="Login&#x20;Issue&#x20;&#x28;for&#x20;related&#x20;issues&#x29;">Login&#x20;Issue&#x20;&#x28;for&#x20;related&#x20;issues&#x29;</option>
-                                    <option value="Payment&#x20;Issue">Payment&#x20;Issue</option>
-                                    <option value="Promo&#x20;Code&#x20;Issue">Promo&#x20;Code&#x20;Issue</option>
-                                    <option value="Website&#x20;Issue">Website&#x20;Issue</option>
-                                    <option value="Other">Other</option>
+                                        <option value="Login&#x20;Issue">Login&#x20;Issue</option>
+                                        <option value="Payment&#x20;Issue">Payment&#x20;Issue</option>
+                                        <option value="Promo&#x20;Code&#x20;Issue">Promo&#x20;Code&#x20;Issue</option>
+                                        <option value="Website&#x20;Issue">Website&#x20;Issue</option>
+                                        <option value="Other">Other</option>
                                     </optgroup>
                                     <optgroup label="Wholesale Inquiry">
                                         <option value="Wholesale&#x20;Account&#x20;Information">
@@ -217,7 +219,8 @@
                             <div class="zf-tempContDiv">
                                 <span> <textarea name="MultiLine" checktype="c1" maxlength="65535"
                                         placeholder=""></textarea> </span>
-                                <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Please complete this required field.</p>
+                                <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Please complete
+                                    this required field.</p>
                             </div>
                             <div class="zf-clearBoth"></div>
                         </li><!---------Multiple Line Ends Here---------->
