--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
                                 <div class="zf-clearBoth"></div>
                             </li><!---------Single Line Ends Here---------->
                             <!---------Email Starts Here---------->
-                            <li class="zf-tempFrmWrapper zf-large col2">
-                                <label class="zf-labelName">
-                                    Email<em class="zf-important">*</em>
+                            <li class="zf-tempFrmWrapper zf-large col2"><label class="zf-labelName">
+                                    Email
+                                    <em class="zf-important">*</em>
                                 </label>
                                 <div class="zf-tempContDiv">
-                                    <span> <input fieldType=9 type="text" maxlength="255" name="Email" checktype="c5"
-                                            value="" placeholder="" id="Email" /></span>
+                                    <span id="loaderContainer"> <input fieldType=9 type="text" maxlength="255"
+                                            name="Email" checktype="c5" value="" placeholder="" id="Email" />
+                                        <div id="loader"></div>
+                                    </span>
                                     <p id="Email_error" class="zf-errorMessage" style="display:none;">Please complete
                                         this required field.</p>
                                 </div>
