--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </label>
                             <div class="zf-tempContDiv">
                                 <select class="zf-form-sBox" name="Dropdown" checktype="c1">
-                                    <option selected="true" value="-Select-" disabled>-- Please Select --</option>
+                                    <option selected="true" value="-Select-">-Select-</option>
                                     <optgroup label="Account Issue">
                                         <option value="Update&#x20;Account&#x20;Information">
                                             Update&#x20;Account&#x20;Information</option>
@@ -146,6 +146,7 @@
                                     <optgroup label="Order Issue">
                                         <option value="Defective&#x20;Item">Defective&#x20;Item</option>
                                         <option value="Missing&#x20;Item">Missing&#x20;Item</option>
+                                        <option value="Wrong&#x20;Item">Wrong&#x20;Item</option>
                                         <option value="Wrong&#x20;Item">Wrong&#x20;Item</option>
                                         <option value="Payment&#x20;Issue">Payment&#x20;Issue</option>
                                         <option value="Product&#x20;Assembly">Product&#x20;Assembly</option>
