--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </label>
                             <div class="zf-tempContDiv">
                                 <select class="zf-form-sBox" name="Dropdown" checktype="c1">
-                                    <option selected="true" value="-Select-">-Select-</option>
+                                    <option selected="true" value="-Select-" disabled>Select</option>
                                     <optgroup label="Account Issue">
                                         <option value="Update&#x20;Account&#x20;Information">
                                             Update&#x20;Account&#x20;Information</option>
