--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hookah&#x20;Wholesalers&#x20;-&#x20;Support&#x20;Ticket&#x20;&#x28;STAGING&#x29;</title>
+    <title>Production&#x20;GHW&#x20;-&#x20;Contact&#x20;US&#x20;&#x28;Form&#x29;</title>
     <link href="css/form.css" rel="stylesheet" type="text/css">
     <script src="js/validation.js"></script>
 </head>
@@ -121,24 +121,24 @@
                                 <select class="zf-form-sBox" name="Dropdown" checktype="c1">
                                     <option selected="true" value="-Select-" disabled>Select</option>
                                     <optgroup label="Account Issue">
-                                        <option value="Update&#x20;Account&#x20;Information">
+                                        <option value="Account&#x20;Modifications&#x20;Request">
                                             Update&#x20;Account&#x20;Information</option>
-                                        <option value="Forgot&#x20;Password">Forgot&#x20;Password</option>
-                                        <option value="Other&#x20;Login&#x20;Issue">Other&#x20;Login&#x20;Issue</option>
+                                        <option value="">Forgot&#x20;Password</option>
+                                        <option value="">Other&#x20;Login&#x20;Issue</option>
                                     </optgroup>
                                     <optgroup label="Cancel / Modify Existing Order">
-                                        <option value="Order&#x20;Cancellation&#x20;Request">
+                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
                                             Order&#x20;Cancellation&#x20;Request</option>
-                                        <option value="Modify&#x20;Order&#x20;Request">Modify&#x20;Order&#x20;Request
+                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">Modify&#x20;Order&#x20;Request
                                         </option>
-                                        <option value="Modify&#x20;Address&#x20;Request">
+                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
                                             Modify&#x20;Address&#x20;Request</option>
-                                        <option value="Modify&#x20;Shipping&#x20;Method&#x20;Request">
+                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
                                             Modify&#x20;Shipping&#x20;Method&#x20;Request</option>
                                     </optgroup>
                                     <optgroup label="International Inquiry">
-                                        <option value="International&#x20;Returns">International&#x20;Returns</option>
-                                        <option value="International&#x20;Refused&#x20;Package">
+                                        <option value="International&#x20;Returns&#x20;/&#x20;Exchange">International&#x20;Returns</option>
+                                        <option value="Incorrect&#x20;Incomplete&#x20;/&#x20;intercept&#x20;Shipping&#x20;Address">
                                             International&#x20;Refused&#x20;Package</option>
                                         <option value="International&#x20;Shipping">International&#x20;Shipping</option>
                                         <option value="Other">Other</option>
@@ -220,8 +220,8 @@
                                 Description
                             </label>
                             <div class="zf-tempContDiv">
-                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535"
-                                        placeholder=""></textarea> </span>
+                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535" placeholder=""
+                                        style="font-family: Arial, Helvetica, sans-serif;"></textarea> </span>
                                 <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Please complete
                                     this required field.</p>
                             </div>
