--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
                                 <select class="zf-form-sBox" name="Dropdown" checktype="c1">
                                     <option selected="true" value="-Select-" disabled>Select</option>
                                     <optgroup label="Account Issue">
-                                        <option value="Account&#x20;Modifications&#x20;Request">
+                                        <option value="Update&#x20;Account&#x20;Information">
                                             Update&#x20;Account&#x20;Information</option>
-                                        <option value="">Forgot&#x20;Password</option>
-                                        <option value="">Other&#x20;Login&#x20;Issue</option>
+                                        <option value="Forgot&#x20;Password">Forgot&#x20;Password</option>
+                                        <option value="Other&#x20;Login&#x20;Issue">Other&#x20;Login&#x20;Issue</option>
                                     </optgroup>
                                     <optgroup label="Cancel / Modify Existing Order">
-                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
+                                        <option value="Order&#x20;Cancellation&#x20;Request">
                                             Order&#x20;Cancellation&#x20;Request</option>
-                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">Modify&#x20;Order&#x20;Request
+                                        <option value="Modify&#x20;Order&#x20;Request">Modify&#x20;Order&#x20;Request
                                         </option>
-                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
+                                        <option value="Modify&#x20;Address&#x20;Request">
                                             Modify&#x20;Address&#x20;Request</option>
-                                        <option value="Cancel&#x20;/&#x20;Modify&#x20;Order">
+                                        <option value="Modify&#x20;Shipping&#x20;Method&#x20;Request">
                                             Modify&#x20;Shipping&#x20;Method&#x20;Request</option>
                                     </optgroup>
                                     <optgroup label="International Inquiry">
-                                        <option value="International&#x20;Returns&#x20;/&#x20;Exchange">International&#x20;Returns</option>
-                                        <option value="Incorrect&#x20;Incomplete&#x20;/&#x20;intercept&#x20;Shipping&#x20;Address">
+                                        <option value="International&#x20;Returns">International&#x20;Returns</option>
+                                        <option value="International&#x20;Refused&#x20;Package">
                                             International&#x20;Refused&#x20;Package</option>
                                         <option value="International&#x20;Shipping">International&#x20;Shipping</option>
                                         <option value="Other">Other</option>
@@ -220,8 +220,8 @@
                                 Description
                             </label>
                             <div class="zf-tempContDiv">
-                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535" placeholder=""
-                                        style="font-family: Arial, Helvetica, sans-serif;"></textarea> </span>
+                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535"
+                                        placeholder="" style="font-family: Arial, Helvetica, sans-serif;"></textarea> </span>
                                 <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Please complete
                                     this required field.</p>
                             </div>
