--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                                 <select class="zf-form-sBox" name="Dropdown" checktype="c1">
                                     <option selected="true" value="-Select-" disabled>Select</option>
                                     <optgroup label="Account Issue">
-                                        <option value="Update&#x20;Account&#x20;Information">
+                                        <option textassign_val="Account Modifications Request" formula_val
+                                            value="Update&#x20;Account&#x20;Information">
                                             Update&#x20;Account&#x20;Information</option>
                                         <option value="Forgot&#x20;Password">Forgot&#x20;Password</option>
                                         <option value="Other&#x20;Login&#x20;Issue">Other&#x20;Login&#x20;Issue</option>
@@ -220,8 +221,8 @@
                                 Description
                             </label>
                             <div class="zf-tempContDiv">
-                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535"
-                                        placeholder="" style="font-family: Arial, Helvetica, sans-serif;"></textarea> </span>
+                                <span> <textarea name="MultiLine" checktype="c1" maxlength="65535" placeholder=""
+                                        style="font-family: Arial, Helvetica, sans-serif;"></textarea> </span>
                                 <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Please complete
                                     this required field.</p>
                             </div>
